deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-gin-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-gin-app
  template:
    metadata:
      labels:
        app: my-gin-app
    spec:
      containers:
      - name: my-gin-app
        image: yangchuansheng/my-gin-app
        ports:
        - containerPort: 8080
