service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-gin-app
spec:
  type: ClusterIP
  selector:
    app: my-gin-app
  ports:
  - port: 80
    targetPort: 8080
