ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: my-gin-app
spec:
  rules:
    - host: my-gin-app.kubesphere.test.com
      http:
        paths:
          - path: /homepage
            pathType: Prefix
            backend:
              service:
                name: my-gin-app
                port:
                  number: 80
